deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testservicebuswrokerapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: testservicebuswrokerapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: testservicebuswrokerapp
    spec:
      imagePullSecrets:    
        - name: newtestappjspcont
      containers:
        - name: testservicebuswrokerapp
          image: newtestappjspcont.azurecr.io/dotnetapitest:#{image_tag}#
          #image: containerregistrydotnetapitest1.azurecr.io/dotnetapitest:75
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"              
            requests:
              cpu: "500m"
              memory: "128Mi"           
          ports:
            - containerPort: 80
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---

apiVersion: v1
kind: Service
metadata:
  name: testservicebuswrokerapp-svc
spec:
  selector:
    app: testservicebuswrokerapp
  ports:
  - name: testservicebuswrokerapp
    protocol: TCP
    port: 8005
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testservicebuswrokerapp-ingress
  namespace: testservicebuswrokerapp-nmspce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: testservicebuswrokerapp-svc
            port:
              number: 8005
